# otel-py

./: .coverage  .gitignore  BUILD  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pants.ci.toml  pants.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  makefile.yml  pylint.yml  pytest.yml  python-app.yml  python-publish.yml  release.yml
cisco_otel_py/: __init__.py  configurations.py  consts.py  distro.py  exporter_factory.py  options.py  sample.py  trace.py  tracing.py
cisco_otel_py/cmd/: bootstrap.py  call_bootstrap.py  trace.py
cisco_otel_py/instrumentations/: __init__.py  constants.py  filter.py  instrumentation_wrapper.py  registry.py  utils.py  wrapped_instrumentation.py  wrappers.py
cisco_otel_py/instrumentations/aiohttp/: __init__.py
cisco_otel_py/instrumentations/grpc/: __init__.py
cisco_otel_py/instrumentations/requests/: __init__.py
cisco_telescope/: __init__.py  configuration.py  consts.py  distro.py  exporter_factory.py  instrumentation_wrapper.py  main.py  options.py  tracing.py
cisco_telescope/cmd/: __init__.py  bootstrap.py  trace.py
cisco_telescope/instrumentations/: instrumentation_wrapper.py  utils.py
cisco_telescope/instrumentations/aiohttp/: __init__.py
cisco_telescope/instrumentations/grpc/: __init__.py
cisco_telescope/instrumentations/kafka/: __init__.py
cisco_telescope/instrumentations/pymongo/: __init__.py
cisco_telescope/instrumentations/requests/: __init__.py
cisco_telescope/tests/: test_options.py  test_tracing.py
instrumentation/telescope_instrumentaion_fastapi/: __init__.py
instrumentation/telescope_instrumentaion_fastapi/tests/: test_fastapi.py
instrumentation/telescope_instrumentaion_requests/: __init__.py
instrumentation/telescope_instrumentaion_requests/tests/: test_requests.py
instrumentation/telescope_instrumentation_aiohttp/: __init__.py
instrumentation/telescope_instrumentation_aiohttp/tests/: test_aiohttp.py
instrumentation/telescope_instrumentation_grpc/: __init__.py
instrumentation/telescope_instrumentation_grpc/tests/stream_stream/: _test_bidirectional_grpc.py  bidirectional_pb2.py  bidirectional_pb2_grpc.py  bidirectional_server.py
instrumentation/telescope_instrumentation_grpc/tests/unary_unary/: hello_pb2.py  hello_pb2_grpc.py  server.py  test_grpc.py
instrumentation/telescope_instrumentation_pymongo/: __init__.py
instrumentation/telescope_instrumentation_pymongo/tests/: test_pymongo.py
instrumentation/telescope_instrumentation_utils/: __init__.py
instrumentation/telescope_instrumentation_utils/tests/: test_utils.py
otel_fso_launcher/: __init__.py  consts.py  distro.py  sample.py  trace.py
otel_fso_launcher/cmd/: bootstrap.py  trace.py
scripts/: req2toml.sh
telescope_instrumentation/aiohttp/: __init__.py
telescope_instrumentation/aiohttp/tests/: test_aiohttp.py
telescope_instrumentation/grpc/: __init__.py
telescope_instrumentation/grpc/tests/stream_stream/: _test_bidirectional_grpc.py  bidirectional.proto  bidirectional_pb2.py  bidirectional_pb2_grpc.py  bidirectional_server.py  test_bidirectional_grpc.py
telescope_instrumentation/grpc/tests/unary_unary/: hello_pb2_grpc.py  server.py  test_grpc.py
telescope_instrumentation/pymongo/: __init__.py
telescope_instrumentation/pymongo/tests/: test_pymongo.py
telescope_instrumentation/requests/: __init__.py
telescope_instrumentation/requests/tests/: __init__.py  test_requests.py
telescope_instrumentation/telescope_aiohttp/: __init__.py
telescope_instrumentation/telescope_aiohttp/tests/: test_aiohttp.py
telescope_instrumentation/utils/: __init__.py
telescope_instrumentation/utils/tests/: base_http_test.py  test_utils.py
telescope_instrumentor/: configuration.py  consts.py  distro.py  exporter_factory.py  instrumentation_wrapper.py  options.py  tracing.py
telescope_instrumentor/src/: configuration.py  consts.py  distro.py  exporter_factory.py  instrumentation_wrapper.py  options.py  tracing.py
telescope_instrumentor/tests/: BUILD  test_exporter_factory.py  test_options.py  test_tracing.py  utils.py
tests/: cisco_opentelemetry_py.py  cisco_otel_py.py  conftest.py  integration.py  test_basic_e2e.py  test_exporter_factory.py  test_init.py  test_options.py  test_otel_fso_launcher.py  test_tracing.py  utils.py
tests/instrumentations/: base_http_test.py  base_http_test_util.py  base_http_tests_util.py  test_aiohttp.py  test_decoder.py  test_kafka.py  test_pymongo.py  test_requests.py  test_utils.py
tests/instrumentations/grpc/: client.py  hello_pb2.py  hello_pb2_grpc.py  server.py  test_grpc.py
tests/instrumentations/grpc/stream_stream/: bidirectional_pb2.py  bidirectional_pb2_grpc.py  bidirectional_server.py  test_bidirectional_grpc.py
tests/instrumentations/grpc/unary_unary/: hello_pb2_grpc.py  server.py  test_grpc.py
tests/instrumentations/streamed_grpc/: bidirectional_client.py  bidirectional_pb2.py  bidirectional_pb2_grpc.py  bidirectional_server.py
