[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Cisco Epsagon Team <support@epsagon.com>"]
description = "Cisco Distribution for OpenTelemetry"
license = "Apache-2.0"
name = "cisco-telescope"
readme = "README.md"
repository = "https://github.com/cisco-open/otel-py"
version = "1.0.0"

[tool.poetry.dependencies]
Deprecated = "^1.2.13"
GitPython = "^3.1.27"
Pygments = "^2.12.0"
aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
appnope = "^0.1.3"
argparse = "^1.4.0"
asgiref = "^3.5.2"
asttokens = "^2.0.5"
async-timeout = "^4.0.2"
attrs = "^21.4.0"
backcall = "^0.2.0"
backoff = "^1.10.0"
black = "^22.3.0"
bleach = "^5.0.0"
certifi = "^2022.5.18.1"
charset-normalizer = "^2.0.12"
cisco-opentelemetry-specifications = "^0.0.17"
click = "^8.1.3"
click-log = "^0.4.0"
colorama = "^0.4.4"
coverage = "^6.3.3"
decorator = "^5.1.1"
distlib = "^0.3.4"
docutils = "^0.18.1"
dotty-dict = "^1.3.0"
execnet = "^1.9.0"
executing = "^0.8.3"
filelock = "^3.7.0"
frozenlist = "^1.3.0"
gitdb = "^4.0.9"
googleapis-common-protos = "^1.56.1"
grpcio = "^1.46.3"
idna = "^3.3"
importlib-metadata = "^4.11.4"
iniconfig = "^1.1.1"
invoke = "^1.7.1"
ipdb = "^0.13.9"
ipython = "^8.3.0"
jedi = "^0.18.1"
keyring = "^23.5.0"
matplotlib-inline = "^0.1.3"
multidict = "^6.0.2"
mypy-extensions = "^0.4.3"
opentelemetry-api = "1.10.0"
opentelemetry-distro = "0.29b0"
opentelemetry-exporter-otlp = "1.10.0"
opentelemetry-exporter-otlp-proto-grpc = "1.10.0"
opentelemetry-exporter-otlp-proto-http = "1.10.0"
opentelemetry-instrumentation = "0.29b0"
opentelemetry-instrumentation-aiohttp-client = "0.29b0"
opentelemetry-instrumentation-aiopg = "0.29b0"
opentelemetry-instrumentation-asgi = "0.29b0"
opentelemetry-instrumentation-asyncpg = "0.29b0"
opentelemetry-instrumentation-aws-lambda = "0.29b0"
opentelemetry-instrumentation-boto = "0.29b0"
opentelemetry-instrumentation-botocore = "0.29b0"
opentelemetry-instrumentation-celery = "0.29b0"
opentelemetry-instrumentation-dbapi = "0.29b0"
opentelemetry-instrumentation-django = "0.29b0"
opentelemetry-instrumentation-elasticsearch = "0.29b0"
opentelemetry-instrumentation-falcon = "0.29b0"
opentelemetry-instrumentation-fastapi = "0.29b0"
opentelemetry-instrumentation-flask = "0.29b0"
opentelemetry-instrumentation-grpc = "0.29b0"
opentelemetry-instrumentation-httpx = "0.29b0"
opentelemetry-instrumentation-jinja2 = "0.29b0"
opentelemetry-instrumentation-kafka-python = "0.29b0"
opentelemetry-instrumentation-logging = "0.29b0"
opentelemetry-instrumentation-mysql = "0.29b0"
opentelemetry-instrumentation-pika = "0.29b0"
opentelemetry-instrumentation-psycopg2 = "0.29b0"
opentelemetry-instrumentation-pymemcache = "0.29b0"
opentelemetry-instrumentation-pymongo = "0.29b0"
opentelemetry-instrumentation-pymysql = "0.29b0"
opentelemetry-instrumentation-pyramid = "0.29b0"
opentelemetry-instrumentation-redis = "0.29b0"
opentelemetry-instrumentation-requests = "0.29b0"
opentelemetry-instrumentation-sklearn = "0.29b0"
opentelemetry-instrumentation-sqlalchemy = "0.29b0"
opentelemetry-instrumentation-sqlite3 = "0.29b0"
opentelemetry-instrumentation-starlette = "0.29b0"
opentelemetry-instrumentation-tornado = "0.29b0"
opentelemetry-instrumentation-urllib = "0.29b0"
opentelemetry-instrumentation-urllib3 = "0.29b0"
opentelemetry-instrumentation-wsgi = "0.29b0"
opentelemetry-propagator-aws-xray = "1.0.1"
opentelemetry-proto = "1.10.0"
opentelemetry-sdk = "1.10.0"
opentelemetry-semantic-conventions = "0.29b0"
opentelemetry-test-utils = "0.29b0"
opentelemetry-util-http = "0.29b0"
packaging = "^21.3"
parso = "^0.8.3"
pathspec = "^0.9.0"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
pip = "^22.0"
pkginfo = "^1.8.2"
platformdirs = "^2.5.2"
pluggy = "^1.0.0"
prompt-toolkit = "^3.0.29"
protobuf = "^3.20.1"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
py = "^1.11.0"
pyparsing = "^3.0.9"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-forked = "^1.4.0"
pytest-xdist = "^2.5.0"
python = "^3.8"
python-gitlab = "^3.4.0"
python-semantic-release = "^7.28.1"
readme-renderer = "^35.0"
requests = "^2.27.1"
requests-toolbelt = "^0.9.1"
rfc3986 = "^2.0.0"
semver = "^2.13.0"
setuptools = "^58.1.0"
setuptools-scm = "^6.4.2"
six = "^1.16.0"
smmap = "^5.0.0"
stack-data = "^0.2.0"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.10.2"
tqdm = "^4.64.0"
traitlets = "^5.2.1.post0"
twine = "^3.8.0"
typing-extensions = "^4.2.0"
urllib3 = "^1.26.9"
virtualenv = "^20.14.1"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
wrapt = "^1.14.1"
yarl = "^1.7.2"
zipp = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"
opentelemetry-test-utils = "0.29b0"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
python-semantic-release = "^7.28.0"
toml-sort = "^0.20.0"
virtualenv = "^20.14.0"

[tool.poetry.scripts]
telescope = 'cisco_telescope.cmd.trace:run'
telescope-bootstrap = 'cisco_telescope.cmd.bootstrap:run'

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_release = true
upload_to_repository = true
version_source = "tag"
version_variable = "pyproject.toml:version"
