[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Cisco Epsagon Team <support@epsagon.com>"]
description = "Cisco Distribution for OpenTelemetry"
license = "Apache-2.0"
name = "cisco-telescope"
readme = "README.md"
repository = "https://github.com/cisco-open/otel-py"
version = "1.0.0"

[tool.poetry.dependencies]

Flask = "2.1.2"
protobuf = "3.19.0"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
Werkzeug = "2.1.2"
aiohttp = "3.8.1"
anyio = "3.6.1"
argparse = "^1.4.0"
certifi = "2022.5.18.1"
cisco-opentelemetry-specifications = "0.0.17"
click = "8.1.3"
fastapi = "0.78.0"
grpcio = "1.46.3"
h11 = "0.12.0"
httpcore = "0.15.0"
httpx = "0.23.0"
idna = "3.3"
importlib-metadata = "4.11.4"
itsdangerous = "2.1.2"
opentelemetry-contrib-instrumentations = "0.30b1"
opentelemetry-distro = "0.30b1"
opentelemetry-exporter-otlp = "1.11.0"
opentelemetry-exporter-otlp-proto-grpc = "1.11.0"
opentelemetry-exporter-otlp-proto-http = "1.11.0"
pip = "22.0.4"
pydantic = "1.9.1"
python = "^3.8"
requests = "2.27.1"
rfc3986 = "1.5.0"
setuptools = "58.1.0"
six = "1.16.0"
sniffio = "1.2.0"
starlette = "0.19.1"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
wrapt = "1.14.1"
zipp = "3.8.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"
opentelemetry-test-utils = "0.30b1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
python-semantic-release = "^7.28.0"
toml-sort = "^0.20.0"
virtualenv = "^20.14.0"

[tool.poetry.scripts]
telescope = 'cisco_telescope.cmd.trace:run'
telescope-bootstrap = 'cisco_telescope.cmd.bootstrap:run'

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_release = true
upload_to_repository = true
version_source = "tag"
version_variable = "pyproject.toml:version"
